--- a/default.hbs
+++ b/default.hbs
@@ -46,6 +46,8 @@
                         {{#if @site.facebook}}
                         <a href="{{facebook_url @site.facebook}}" title="Facebook" target="_blank" rel="noopener">Facebook</a>
                         {{/if}}
+                        <a href="https://www.instagram.com/jmptable/" title="Instagram" target="_blank" rel="noopener">Instagram</a>
+                        <a href="https://github.com/jmptable" title="GitHub" target="_blank" rel="noopener">GitHub</a>
                         {{#if @site.twitter}}
                         <a href="{{twitter_url @site.twitter}}" title="Twitter" target="_blank" rel="noopener">Twitter</a>
                         {{/if}}
