--- a/partials/blog-post-card.hbs
+++ b/partials/blog-post-card.hbs
@@ -1,5 +1,3 @@
 <article>
-  <a href="{{url}}">
-    <h2 class="post-card-title">{{title}}</h2>
-  </a>
+  <h3>[{{date}}] <a href="{{url}}">{{title}}</a></h3>
 </article>
