--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -524,6 +524,13 @@ body {
     text-align: center;
 }
 
+.post-content-date {
+    margin: 0 0 3vw;
+    color: var(--color-base);
+    text-align: center;
+    font-size: 2em;
+}
+
 .post-content-excerpt {
     margin: 0 0 3vw;
     font-size: 2.2rem;
