--- a/post.hbs
+++ b/post.hbs
@@ -5,7 +5,7 @@
 
     <header class="post-content-header">
         <h1 class="post-content-title">{{title}}</h1>
-        <time class="post-full-meta-date" datetime="{{date format="YYYY-MM-DD"}}">{{date format="D MMMM YYYY"}}</time>
+        <time class="post-content-date" datetime="{{date format="YYYY-MM-DD"}}">{{date format="D MMMM YYYY"}}</time>
     </header>
 
     {{#if custom_excerpt}}
